--- a/src/pages/signin/Signin.scss
+++ b/src/pages/signin/Signin.scss
@@ -66,8 +66,8 @@
 
     .footer-container {
       display: block;
-      position: absolute;
-      bottom: -5rem;
+      // position: absolute;
+      // bottom: -10rem;
 
       .bottommountains {
         width: 100vw;
