--- a/src/pages/signup/Signup.scss
+++ b/src/pages/signup/Signup.scss
@@ -1,69 +1,91 @@
 .signup-page {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  .banner-container {
+    height: 100vh;
+    .logo {
+      position: absolute;
+      display: flex;
+      justify-content: center;
+      left: 15%;
+      width: 15%;
+    }
+
+    img {
+      width: 100%;
+      height: 130%;
+    }
+  }
+
+  .form-container {
+    height: 100vh;
+  }
+
+  .header-container,
+  .footer-container {
+    display: none;
+  }
+}
+
+// Small devices
+@media (max-width: 576px) {
+  .signup-page {
+    width: 90%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: auto;
 
     .banner-container {
-        height: 100vh;
+      display: none;
+    }
+    .header-container {
+      display: block;
 
-        img {
-            width: 100%;
-            height: 100%;
+      .logomobile {
+        position: absolute;
+        top: 2rem;
+        right: 1.5rem;
+        font-size: 2rem;
+        font-weight: 500;
+        color: var(--lightblue);
+
+        span {
+          color: var(--darkblue);
         }
+      }
+
+      .mobile-banner-container {
+        margin-top: 25px;
+        text-align: center;
+      }
     }
 
     .form-container {
-        height: 100vh;
+      height: auto;
     }
 
-    .mobile-banner-container,
     .footer-container {
-        display: none;
-    }
+      display: block;
 
-    .best-buddylogo {
-        display: none;
-        text-align: center;
-        margin-top: 25px;
+      .bottommountains {
+        width: 100vw;
+      }
     }
+  }
 }
 
-@media(max-width:767.98px) {
-    .signup-page {
-        display: grid;
-        grid-template-columns: auto;
+// Medium devices (tablets)
+@media (max-width: 768px) {
+}
 
-        .form-container {
-            height: auto;
-        }
+// Large devices (desktops)
+@media (max-width: 992px) {
+}
 
-        .banner-container {
-            display: none;
-        }
+// X-Large devices (large desktops, 1200px and up)
+@media (max-width: 1200px) {
+}
 
-        .mobile-banner-container {
-            margin-top: 25px;
-            text-align: center;
-            display: block;
-        }
-
-        .footer-container {
-            display: block;
-            position: relative;
-
-            .footer-primary,
-            .footer-secondary {
-                width: 100%;
-            }
-
-            .footer-primary {
-                position: absolute;
-                bottom: 0;
-            }
-        }
-
-        .best-buddylogo {
-            display: block;
-            text-align: center;
-        }
-    }
+// XX-Large devices (larger desktops, 1400px and up)
+@media (max-width: 1400px) {
 }
